--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -4,10 +4,6 @@
   <%= link_to t('.new_question'), new_question_path, class:"btn btn-outline-primary" %>
 </div>
 
-<div id="questions">
-  <%= render 'question' %>
-</div>
+<%= render @questions %>
 
-<div class="py-3" id="load_more_questions_button">
-  <%= button_to "Load more", load_more_questions_path(page: @pagy.next), class:"btn btn-outline-primary" %>
-</div>
+<%= render 'questions/next_page' %>
