add auto-loading infinite scroll for answers

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -58,7 +58,7 @@
   <%= render 'comments/loaded_comments', { answer: answer } %>
 <% end %>
 
-<%= render 'answers/loaded_answers' %>
+<%= render 'answers/next_page' %>
 
 <script>
   function showForm(id, action) {
