--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,2 +1,11 @@
-<%= link_to category.name, category_path(category),
-            class: "badge rounded-pill text-bg-info text-decoration-none" %>
+<div class="pt-3">
+  <div class="card text-center">
+    <div class="card-body mt-2">
+      <h5 class="card-title"><%= link_to category.name, category_path(category) %></h5>
+      <%= pluralize(category.questions.count, t('.questions_count')) %>
+      <% if already_subscribed?(category) %>
+        <br><span class="badge rounded-pill text-bg-secondary"><%= t('.subscribed') %></span>
+      <% end %>
+    </div>
+  </div>
+</div>
