--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,18 +4,6 @@
   <%= link_to t('.new_category'), new_category_path, class:"btn btn-outline-primary" %>
 <% end %>
 
-<% @categories.each do |category| %>
-  <div class="pt-3">
-    <div class="card text-center">
-      <div class="card-body mt-2">
-        <h5 class="card-title"><%= link_to category.name, category_path(category) %></h5>
-        <%= pluralize(category.questions.count, t('.questions_count')) %>
-        <% if already_subscribed?(category) %>
-          <br><span class="badge rounded-pill text-bg-secondary"><%= t('.subscribed') %></span>
-        <% end %>
-      </div>
-    </div>
-  </div>
-<% end %>
+<%= render @categories %>
 
-<%== pagination @pagy %>
+<%= render 'categories/next_page' %>
