add pagination for question on categories show page

--- a/app/views/categories/_category_questions_next_page.html.erb
+++ b/app/views/categories/_category_questions_next_page.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag(
-      "questions-page-#{@pagy.next}",
+      "category-questions-page-#{@pagy.next}",
       loading: :lazy,
       src: pagy_url_for(@pagy, @pagy.next),
       target: "_top" 
