--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -13,7 +13,6 @@
   <% end %>
 </div>
 
-<%# displaying the category questions by rendering page questions and sent to it the @category.questions parameter (see show method in categories_controller) %>
-<%= render 'questions/question' %>
+<%= render @questions %>
 
-<%== pagination @pagy %>
+<%= render 'categories/category_questions_next_page' %>
