create next_page partial and use it for categories, answers, questions pagination

--- a/app/views/answers/loaded_answers.html.erb
+++ b/app/views/answers/loaded_answers.html.erb
@@ -8,6 +8,6 @@
 
     <%= render 'comments/loaded_comments', { answer: answer } %>
   <% end %>
-  
-  <%= render 'answers/next_page' %>
+
+  <%= render 'shared/next_page', subject: 'answers' %>
 <% end %>
