--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -60,7 +60,7 @@
   <%= render 'comments/loaded_comments', { answer: answer } %>
 <% end %>
 
-<%= render 'answers/next_page' %>
+<%= render 'shared/next_page', subject: 'answers' %>
 
 <script>
   function showForm(id, action) {
