--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -15,4 +15,4 @@
 
 <%= render @questions %>
 
-<%= render 'categories/category_questions_next_page' %>
+<%= render 'shared/next_page', subject: 'category-questions' %>
