--- a/app/views/shared/_reply_form.html.erb
+++ b/app/views/shared/_reply_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for reply do |f| %>
+<%= form_for(reply, data: { turbo: false }) do |f| %>
   <div class="input-group my-3">
     <% if reply.is_a?(Answer) %>
       <% if reply.new_record? %>
