--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -21,12 +21,20 @@
     <%= t('.rating') %>: <%= answer.weighted_score %>
     <% unless current_user&.voted_for? answer %>
       <span class="ps-3">
-        <span class="pe-2"><%= link_to (fa_icon "arrow-up"), answer_vote_up_path(answer),
-                                        method: :post, 
-                                        class: "btn btn-secondary" %></span>
-        <%= link_to (fa_icon "arrow-down"), answer_vote_down_path(answer),
-                    method: :post, 
-                    class: "btn btn-secondary" %>
+        <span class="pe-2">
+          <%= button_to answer_vote_up_path(answer),
+                        class: "btn btn-secondary",
+                        data: { turbo: false },
+                        form: {style: 'display:inline-block;'} do %>
+            <%= fa_icon "arrow-up" %>
+          <% end %>
+        </span>
+        <%= button_to answer_vote_down_path(answer),
+                      class: "btn btn-secondary",
+                      data: { turbo: false},
+                      form: {style: 'display:inline-block;'} do %>
+          <%= fa_icon "arrow-down" %>
+        <% end %>
       </span>
     <% end %>
 
