--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -44,7 +44,7 @@
         <% if user_signed_in? %>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <%= current_user.username %>
+              <%= current_user.has_role?(:admin) ? "#{current_user.username} (Admin)" : current_user.username %>
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
               <li><%= link_to t('navbar.edit_profile'), edit_user_registration_path, class:"nav-link" %></li>
