--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,24 @@
-<% @users.each do |user| %>
-  <%= user.email %>
-  <%= user.roles.pluck(:name) %>
-  <%= link_to 'Edit roles', edit_user_path(user) %>
-  <br>
-<% end %>
+<h1><%= t('.title') %></h1>
+
+<table class="table table-striped table-hover table-bordered">
+  <thead>
+    <tr>
+      <th scope="col">Id</th>
+      <th scope="col"><%= t('.username') %></th>
+      <th scope="col"><%= t('.email') %></th>
+      <th scope="col"><%= t('.roles') %></th>
+      <th scope="col"><%= t('.actions') %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @users.each do |user| %>
+      <tr>
+        <th scope="row"><%= user.id %></th>
+        <td><%= user.username %></td>
+        <td><%= user.email %></td>
+        <td><%= user.roles.pluck(:name).join(', ') %></td>
+        <td><%= link_to t('.edit_profile'), edit_user_path(user) %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
