add comment policy

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -18,10 +18,12 @@
         <%= button_tag t('global.button.reply'),
                 class:"btn btn-outline-primary btn-sm",
                 onclick: "showForm(#{comment.id}, 'reply')" %>
-        <% if owner?(comment) %>
+        <% if policy(comment).edit? %>
           <%= button_tag t('global.button.edit'),
                   class:"btn btn-outline-primary btn-sm",
                   onclick: "showForm(#{comment.id}, 'edit')" %>
+        <% end %>
+        <% if policy(comment).destroy? %>
           <%= link_to t('global.button.delete'), comment_path(comment), method: :delete, 
                       data: { confirm: t('global.dialog.you_sure') }, class:"btn btn-outline-danger btn-sm" %>
         <% end %>
