--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -12,10 +12,10 @@
         <h5 class="card-title"><%= question.title %></h5>
         <p class="card-text"><%= question.body %></p>
         <%= link_to t('global.button.show'), question_path(question), class:"btn btn-outline-primary" %>
-        <% if policy(question).edit? %>
+        <% if can_edit?(question) %>
           <%= link_to t('global.button.edit'), edit_question_path(question), class:"btn btn-outline-primary" %>
         <% end %>
-        <% if policy(question).destroy? %>
+        <% if can_destroy?(question) %>
           <%= link_to t('global.button.delete'), question_path(question), method: :delete,
                       data: { confirm: t('global.dialog.you_sure') }, class:"btn btn-outline-danger" %>
         <% end %>
