--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,14 +1,14 @@
-<h1><%= t('.title') %>: <%= category.name %></h1>
+<h1><%= t('.title') %>: <%= @category.name %></h1>
 
 <div class="pt-4">
-  <% if policy(category).edit? %>
-    <%= link_to t('.edit_category'), edit_category_path(category), class:"btn btn-outline-primary" %>
+  <% if policy(@category).edit? %>
+    <%= link_to t('.edit_category'), edit_category_path(@category), class:"btn btn-outline-primary" %>
   <% end %>
-  <% if already_subscribed?(category) %>
-    <%= link_to t('.unsubscribe'), category_subscription_path(category, @subscription), method: :delete, 
+  <% if already_subscribed?(@category) %>
+    <%= link_to t('.unsubscribe'), category_subscription_path(@category, @subscription), method: :delete, 
                             class: "btn btn-danger" %>
   <% else %>
-    <%= link_to t('.subscribe'), category_subscriptions_path(category), method: :post, 
+    <%= link_to t('.subscribe'), category_subscriptions_path(@category), method: :post, 
                             class: "btn btn-warning" %>
   <% end %>
 </div>
