add helper methods in categories views

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,6 @@
 <h1><%= t('.title') %></h1>
 
-<% if policy(:category).new? %>
+<% if can_build?(:category) %>
   <%= link_to t('.new_category'), new_category_path, class:"btn btn-outline-primary" %>
 <% end %>
 
