update pages in active admin related to users, fix sign out button styling

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -53,8 +53,7 @@
               <li><%= link_to t('navbar.edit_profile'), edit_user_registration_path, class:"nav-link" %></li>
               <li><hr class="dropdown-divider"></li>
               <li><%= button_to t('navbar.sign_out'), destroy_user_session_path, method: :delete,
-                                'data-turbo': false,
-                                class:"nav-link" %></li>
+                                'data-turbo': false, class: "btn btn-link nav-link" %></li>
             </ul>
           </li>
         <% else %>
