--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -10,7 +10,7 @@
         <p class="card-text"><small class="text-muted">
           <%= format_timestamp(comment.created_at) %>
           <% if comment.parent.is_a?(Comment) %>
-            <%= link_to "Replied to #{comment.parent.user.username}",
+            <%= link_to "#{t('.replied_to_link')} #{comment.parent.user.username}",
                         question_path(@question, anchor: "comment-#{comment.parent.id}") %>
           <% end %>
         </small></p>
