--- a/app/views/comments/load_more_comments.turbo_stream.erb
+++ b/app/views/comments/load_more_comments.turbo_stream.erb
@@ -7,7 +7,7 @@
 <%= turbo_stream.update "load-more-comments-button-#{@answer.id}" do %>
   <% if @pagy_comments.next.present? %>
     <div class="mt-2">
-      <%= button_to "Show more", load_more_comments_path(answer_id: @answer.id, page: @pagy_comments.next),
+      <%= button_to t('global.button.show_more'), load_more_comments_path(answer_id: @answer.id, page: @pagy_comments.next),
                     class:"btn btn-outline-primary" %>
     </div>
   <% end %>
