--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -31,7 +31,11 @@
                   <% if I18n.locale == locale %>
                     <%= tag.span t(locale), class: 'dropdown-item' %>
                   <% else %>
-                    <%= link_to t(locale), change_user_locale_path(locale: locale), method: :post, class: 'dropdown-item' %>
+                    <% if user_signed_in? %>
+                      <%= link_to t(locale), change_user_locale_path(locale: locale), method: :post, class: 'dropdown-item' %>
+                    <% else %>
+                      <%= link_to t(locale), url_for(locale: locale), class: 'dropdown-item' %>
+                    <% end %>
                   <% end %>
                 </li>
               <% end %>
