fix answer and comment views after merge, fix position of changing locale dropdown in the navigation bar

--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -38,11 +38,11 @@
       </span>
     <% end %>
     <div class="reply-form hidden" id="reply_form_<%= answer.id %>">
-      <%= render 'questions/reply_form.html', { reply: answer.comments.build } %>
+      <%= render 'shared/reply_form', { reply: answer.comments.build } %>
     </div>
 
     <div class="reply-form hidden" id="edit_form_<%= answer.id %>">
-      <%= render 'questions/reply_form.html', { reply: answer } %>
+      <%= render 'shared/reply_form', { reply: answer } %>
     </div>
   </div>
 </div>
