--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,7 +17,7 @@
         </li>
       </ul>
 
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav col-12 col-lg-auto mb-2 mb-md-0">
           <li class="nav-item dropdown">
             <%= link_to '#', class: 'nav-link px-2 dropdown-toggle',
               data: {"bs-toggle": 'dropdown'} do %>
@@ -43,7 +43,7 @@
           </li>
         </ul>
 
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav col-12 col-lg-auto mb-2 mb-md-0">
         <% if user_signed_in? %>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
