--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -2,7 +2,10 @@
   <div class="col-md-6">
     <h2 class="pb-4"><%= t('.resend_confirmation_instructions') %></h2>
 
-    <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+    <%= form_for(resource,
+                 as: resource_name,
+                 url: confirmation_path(resource_name),
+                 html: { method: :post, 'data-turbo' => 'false' }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="mb-3">
