--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,10 @@
   <div class="col-md-6">
     <h2 class="pb-4"><%= t('.title', resource: resource.model_name.human) %></h2>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= form_for(resource,
+								 as: resource_name,
+								 url: registration_path(resource_name),
+								 html: { method: :put, 'data-turbo' => 'false' }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="mb-3">
