--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -47,10 +47,10 @@
         <% if user_signed_in? %>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <%= is_admin? ? "#{current_user.username} (#{t('navbar.admin')})" : current_user.username %>
+              <%= admin? ? "#{current_user.username} (#{t('navbar.admin')})" : current_user.username %>
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
-              <% if is_admin? %>
+              <% if admin? %>
                 <li><%= link_to t('navbar.administration'), admin_root_path, class:"nav-link", target: :_blank %></li>
               <% end %>
               <li><%= link_to t('navbar.edit_profile'), edit_user_registration_path, class:"nav-link" %></li>
