--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -2,7 +2,8 @@
   <div class="card text-center">
     <div class="card-body mt-2">
       <h5 class="card-title"><%= link_to category.name, category_path(category) %></h5>
-      <%= pluralize(category.questions_count, t('.questions_count')) %>
+      <%# <%= pluralize(category.questions_count, t('.questions_count')) %>
+      <%= "#{t('.questions_count')}: #{category.questions_count}" %>
       <% if already_subscribed?(category) %>
         <br><span class="badge rounded-pill text-bg-secondary"><%= t('.subscribed') %></span>
       <% end %>
